Upgrade Java version from 1.8 to 11

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,8 +26,8 @@ android {
     namespace 'com.wongpiwat.trust_location'
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11  // Updated from 1_8
+        targetCompatibility JavaVersion.VERSION_11  // Updated from 1_8
     }
 
     defaultConfig {
